--- a/src/main/resources/static/CSS/register-signup.css
+++ b/src/main/resources/static/CSS/register-signup.css
@@ -340,10 +340,15 @@
 
 .spinner {
 	position: absolute;
-	width: 9px;
-	height: 9px;
+	width: 6px;
+	height: 6px;
 	left: 50%;
 	display: none;
+	margin-bottom: 20px;
+}
+
+.spinner-reg {
+	margin-bottom: 95px;
 }
 
 .spinner div {
@@ -530,7 +535,26 @@
 	}
 
 	.spinner {
-		width: 6px;
-		height: 6px;
+		margin-top: 22px;
+		margin-bottom: 0px;
+	}
+
+	.spinner-reg {
+		bottom: 280px;
+	}
+}
+@media (min-width: 391px) and (max-width: 530px) {
+	.spinner {
+		margin-bottom: 30px;
+	}
+}
+@media (max-width: 391px) {
+	.spinner-reg {
+		margin-bottom: 30px;
+	}
+}
+@media (max-width: 353px) {
+	.spinner-reg {
+		margin-bottom: 45px;
 	}
 }
